--- a/portfolio.css
+++ b/portfolio.css
@@ -6,6 +6,7 @@
     padding: 0;
     box-sizing: border-box;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
+    scroll-behavior: smooth;
 }
 
 :root {
@@ -1489,6 +1490,11 @@ header {
     .quote > img{
         width: 100%;
         height: 300px;
+    }
+    
+    .end_line{
+        padding: 0px 0px 20px 0px;
+        font-size: 12px;
     }
 
 }
